--- a/plugins/fabrique_auto/badje/formulaires/editer_activite.html
+++ b/plugins/fabrique_auto/badje/formulaires/editer_activite.html
@@ -47,7 +47,7 @@
 			[(#SAISIE{checkbox, periode,
 				label=<:activite:label_periode:>,
 				datas=[(#ARRAY{
-Automne,automne, 
+Automne,Automne, 
 Hiver,Hiver, 
 Détente,Détente, 
 Printemps,Printemps, 
