--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -27,13 +27,13 @@
     
     <div id="conteneur" class="row">
         [(#REM) Contenu principal ]
-        <div class="large-8">
+        <div class="large-8 columns">
             <INCLURE{fond=contenu/#ENV{type},env}>
         </div>
         
         [(#REM) Sur le sommaire, on affiche la sidebar sommaire ]
         [(#ENV{composition}|=={sommaire}|oui)
-            <div class="large-4 columns">
+            <div id="sidebar" class="large-4 columns">
                 <INCLURE{fond=inclure/sommaire-sidebar, env}>
             </div>
         ]
