On place le cadre de la brochure

--- a/squelettes/inclure/sommaire-sidebar.html
+++ b/squelettes/inclure/sommaire-sidebar.html
@@ -3,3 +3,9 @@
         <INCLURE{fond=inclure/agenda, env}>
     </div>
 </div>
+
+<div class="cadre">
+    <div class="sub-cadre">
+        <INCLURE{fond=inclure/brochure, env}>
+    </div>
+</div>
