On place le cadre sur l'année scolaire et son illustration de gauche.

--- a/squelettes/inclure/sommaire-sidebar.html
+++ b/squelettes/inclure/sommaire-sidebar.html
@@ -9,3 +9,9 @@
         <INCLURE{fond=inclure/brochure, env}>
     </div>
 </div>
+
+<div class="cadre">
+    <div class="sub-cadre no_border">
+        <INCLURE{fond=inclure/annee_scolaire, env}>
+    </div>
+</div>
