On place les images de ce cadre

--- a/squelettes/inclure/annee_scolaire.html
+++ b/squelettes/inclure/annee_scolaire.html
@@ -1,6 +1,9 @@
 <div class="annee_scolaire">
-    <div class="left_illu">
-        
-    </div>
+    <div class="left_illu"></div>
 
+    <div class="go"></div>
+    
+    <div class="texte"></div>
+
+    <div class="right_illu"></div>
 </div>
