--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -29,13 +29,13 @@
         
         [(#REM) Dans un article, on place la sidebar rubrique ]
         [(#ENV{type}|=={article}|oui)
-            <div id="sidebar-art" class="large-4 columns">
+            <div id="sidebar-art" class="large-3 columns">
                 <INCLURE{fond=inclure/rubrique-sidebar, env}>
             </div>
         ]
 
         [(#REM) Contenu principal ]
-        <div id="contenu-principal" class="large-8 columns">
+        <div id="contenu-principal" class="[(#ENV{type}|=={article}|?{large-9 , large-8})] columns">
             <INCLURE{fond=contenu/#ENV{type},env}>
         </div>
         
