Correction des marges et de la taille des colonnes. Placer #EXPOSE dans le menu Styler #EXPOSE Virer le responsive des images. Ajouter la page en hauteur.

--- a/squelettes/contenu/article.html
+++ b/squelettes/contenu/article.html
@@ -1,5 +1,5 @@
 <BOUCLE_contenu_article(ARTICLES){id_article}>
-    <h1>#TITRE</h1>
+    <h1><span>#TITRE</span></h1>
 
     <div class="texte-principal">
         [(#TEXTE)]
