--- a/squelettes/inclure/rubrique-sidebar.html
+++ b/squelettes/inclure/rubrique-sidebar.html
@@ -3,12 +3,12 @@
 
 [(#REM) On va chercher le titre de la rubrique ]
 <BOUCLE_titre_rub(RUBRIQUES){id_rubrique}>
-    <h2 class="turquoise">#TITRE</h2>
+    <h2 class="turquoise"><span>#TITRE</span></h2>
 </BOUCLE_titre_rub>
 
 <ul id="article-rub">
-    <BOUCLE_Menu_rubrique(ARTICLES){id_rubrique}>
-        [<li><a href="#URL_ARTICLE" titele="#TITRE">(#TITRE)</a></li>]
+    <BOUCLE_Menu_rubrique(ARTICLES){id_rubrique} {par num titre}>
+        [<li[ class="(#EXPOSE)"]><a href="#URL_ARTICLE" titele="#TITRE">(#TITRE)</a></li>]
     </BOUCLE_Menu_rubrique>
 </ul>
 </B_Menu_rubrique>
