On place le bouton facebook

--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -9,6 +9,10 @@
         <div class="large-2 columns">
             [(#REM) Menu du site. ]
             <INCLURE{fond=inclure/menu-principal, env}>
+
+            [<div class="facebook">
+                (#CHEMIN{images/facebook.png}|balise_img{facebook, facebook_img})
+            </div>]
         </div>
     </div>
     
