--- a/squelettes/contenu/page-recherche-badje.html
+++ b/squelettes/contenu/page-recherche-badje.html
@@ -1,5 +1,6 @@
 [(#REM) On boucle avec les filtres que l'on peu mettre ]
 <B_recherche>
+<h1>[#GRAND_TOTAL (#GRAND_TOTAL|singulier_ou_pluriel{<:activite_trouve:>, <:activites_trouves:>})]</h1>
 <BOUCLE_recherche(BADJE_ACTIVITES)  {recherche ?}
                                     {code_postal ?IN #ENV{code_postal}}
                                     {age_min ?<= #ENV{age_min}}
@@ -27,15 +28,7 @@
 
     [(#REM) On affiche les données. ]
     [(#GET{afficher}|=={oui}|oui)
-        #NOM
-        #DESCRIPTIF
-        #CODE_POSTAL
-        <br />#PERIODE
-        <br>#AGE_MIN to #AGE_MAX
-        <br>#ACCUEIL_HANDICAP
-        <br />#ACCESSIBILITE_HANDICAP
-        <br />
-        <br />
+        
     ]
 </BOUCLE_recherche>
 </B_recherche>
