On ajoute la marge sur le contenu principal uniquement quand on en a besoin

--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -39,7 +39,7 @@
         ]
 
         [(#REM) Contenu principal ]
-        <div id="contenu-principal" class="[(#ENV{type}|=={article}|oui) large-9 ]
+        <div id="contenu-principal" class="[(#ENV{type}|=={article}|oui) large-9 marge]
                                             [(#ENV{type}|=={article}|non|et{#ENV{composition}|!={recherche-badje}|oui}) large-8 ]
                                             [(#ENV{composition}|=={recherche-badje}|oui) large-7 ]
                                             columns">
