--- a/squelettes/formulaires/cadi.html
+++ b/squelettes/formulaires/cadi.html
@@ -1,10 +1,12 @@
-<div class="formulaire_spip formulaire_#FORM ajax">
+[(#ENV{in_cadi}|non)
+    <div class="formulaire_spip formulaire_#FORM ajax">
 
-[<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
-[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
+    [<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
+    [<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
 
-<form action="#ENV{action}" method="post">
-    #ACTION_FORMULAIRE{#ENV{action}}
-    <input type="submit" class="submit" value="" />
-</form>
-</div>
+    <form action="#ENV{action}" method="post">
+        #ACTION_FORMULAIRE{#ENV{action}}
+        <input type="submit" class="submit" value="" />
+    </form>
+    </div>
+]
