On place le lien pour la séléction du visiteur. On créé aussi cette page.

--- a/squelettes/inclure/recherche-sidebar.html
+++ b/squelettes/inclure/recherche-sidebar.html
@@ -1,4 +1,6 @@
-[(#CHEMIN{images/ma_selection.png}|balise_img{Ma séléction, ma_selection})]
+[<a href="#URL_PAGE{ma-selection}" title="ma séléction">
+(#CHEMIN{images/ma_selection.png}|balise_img{Ma séléction, ma_selection})
+</a>]
 
 <B_mode_emplois>
 <div class="mode_emplois">
@@ -11,6 +13,8 @@
 </div>
 </B_mode_emplois>
 <//B_mode_emplois>
+
+<INCLURE{fond=inclure/detail_activite, env}>
 
 [<a href="#URL_SITE_SPIP" title="Nouvelle Recherche">
     (#CHEMIN{images/nouvelle_recherche.png}|balise_img{Nouvelle recherche, nouvelle_recherche})
