--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -102,3 +102,4 @@
 [<link rel="stylesheet" href="(#CHEMIN{perso.css}|direction_css)" type="text/css" media="projection, screen, tv" />]
 
 [<script src="(#CHEMIN{javascript/aide_form.js})"></script>]
+[<script src="(#CHEMIN{javascript/ajax_detail.js})"></script>]
