On place l'id_activite dans un data pour l'envoyer via Ajax au squelettes de la sidebar

--- a/squelettes/inclure/moteur-recherche.html
+++ b/squelettes/inclure/moteur-recherche.html
@@ -55,7 +55,7 @@
                 <li>de #AGE_MIN à #AGE_MAX | #PRIX</li>
             </ul>
             
-            <a href="#URL_ACTIVITE" title="#NOM_ORGANISME" class="plus_detail">[(#CHEMIN{images/plus_detail.png}|balise_img{plus de détails, plus_detail})]<:detail:></a>
+            <a href="#URL_ACTIVITE" title="#NOM_ORGANISME" class="plus_detail" data-id_activite="#ID_ACTIVITE">[(#CHEMIN{images/plus_detail.png}|balise_img{plus de détails, plus_detail})]<:detail:></a>
         </div>
     ]
 </BOUCLE_recherche>
