Lien vers la séléction en cour.

--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -23,7 +23,9 @@
                 <INCLURE{fond=inclure/info_site, env}>
             </div>
             <div id="selection" class="large-3 columns">
-                [(#CHEMIN{images/ma_selection.png}|balise_img{Ma séléction, ma_selection})]
+                [<a href="#URL_PAGE{ma-selection}" title="ma séléction">
+                    (#CHEMIN{images/ma_selection.png}|balise_img{Ma séléction, ma_selection})
+                </a>]
             </div>
         </div>
     ]
