--- a/squelettes/contenu/page-ma-selection.html
+++ b/squelettes/contenu/page-ma-selection.html
@@ -5,20 +5,9 @@
     [(#GET{save_localite}|!={#LOCALITE}|oui) <h2><span>#LOCALITE</span></h2> ]
     [(#SET{save_localite, #LOCALITE})]
 
-    <h3><span>#NOM_ORGANISME</span> [(#FORMULAIRE_CADI{#ID_ACTIVITE})]</h3>
-    <div class="cadre-recherche">
-        <ul>
-            <li class="bold">#ADRESSE</li>
-            <li class="bold">#CODE_POSTAL #LOCALITE</li>
-            <li class="bold">#TELEPHONE [/ (#GSM)] [/ (#FAX)]</li>
-            <li>[(#PERIODE|afficher_periode{' - '})]</li>
-            <li>de #AGE_MIN à #AGE_MAX | #PRIX</li>
-        </ul>
-        
-        <a href="#URL_ACTIVITE" title="#NOM_ORGANISME" class="plus_detail" data-id_activite="#ID_ACTIVITE">[(#CHEMIN{images/plus_detail.png}|balise_img{plus de détails, plus_detail})]<:detail:></a>
-    </div>
+    <INCLURE{fond=inclure/cadre_activite, env, id_activite}>
 </BOUCLE_ma_selection>
 </div>
 </B_ma_selection>
-Pas d'élément dans le cadi !
+<p>Pas d'élément dans le cadi !</p>
 <//B_ma_selection>
