--- a/squelettes/inclure/moteur-recherche.html
+++ b/squelettes/inclure/moteur-recherche.html
@@ -45,18 +45,7 @@
         [(#GET{save_localite}|!={#LOCALITE}|oui) <h2><span>#LOCALITE</span></h2> ]
         [(#SET{save_localite, #LOCALITE})]
 
-        <h3><span>#NOM_ORGANISME</span> [(#FORMULAIRE_CADI{#ID_ACTIVITE})]</h3>
-        <div class="cadre-recherche">
-            <ul>
-                <li class="bold">#ADRESSE</li>
-                <li class="bold">#CODE_POSTAL #LOCALITE</li>
-                <li class="bold">#TELEPHONE [/ (#GSM)] [/ (#FAX)]</li>
-                <li>[(#PERIODE|afficher_periode{' - '})]</li>
-                <li>de #AGE_MIN à #AGE_MAX | #PRIX</li>
-            </ul>
-            
-            <a href="[(#SELF|parametre_url{id_activite, #ID_ACTIVITE})]" title="#NOM_ORGANISME" class="plus_detail">[(#CHEMIN{images/plus_detail.png}|balise_img{plus de détails, plus_detail})]<:detail:></a>
-        </div>
+        <INCLURE{fond=inclure/cadre_activite, env, id_activite}>
     ]
 </BOUCLE_recherche>
 </div>
