Placer un lien sur la bannière pour revenir sur l'index du site.

--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -3,6 +3,9 @@
         <div class="large-10 columns">
             [(#REM) Header du site uniquement en image. ]
             <div class="header_bg">
+                [<a href="#URL_SITE_SPIP" title="#NOM_SITE_SPIP">
+                    (#CHEMIN{images/header.png}|balise_img{header, header})
+                </a>]
                 <div class="timbre"></div>
             </div>
         </div>
