On place une variable qui signale le retour a la recherche et les liens qui vont avec. On crée aussi une fonction pour récupérer facilement le contexte du formulaire de recherche.

--- a/squelettes/inclure/moteur-recherche.html
+++ b/squelettes/inclure/moteur-recherche.html
@@ -54,6 +54,7 @@
     ]
 </BOUCLE_recherche>
 </div>
-
 </B_recherche>
+<p><:aucun_resultat:></p>
+<a href="[(#URL_SITE_SPIP|parametre_url{retour_recherche, 1})]" title="<:retour_recherche:>"><:retour_recherche:></a>
 <//B_recherche>
