On ajoute la boucle qui crée le sous menu

--- a/squelettes/inclure/menu-principal.html
+++ b/squelettes/inclure/menu-principal.html
@@ -3,9 +3,17 @@
 <B_menu_principal>
 <ul class="menu-principal">
     <BOUCLE_menu_principal(RUBRIQUES){id_parent = 1}>
-    [<li class="[(#COMPTEUR_BOUCLE|alterner{vert, turquoise, rouge, bleu, orange, brun})]">
-        <a href="#URL_RUBRIQUE" title="[(#TITRE|attribut_html)]">(#TITRE)</a>
-    </li>]
+    <li class="[(#COMPTEUR_BOUCLE|alterner{vert, turquoise, rouge, bleu, orange, brun})]">
+        [<a href="#URL_RUBRIQUE" title="[(#TITRE|attribut_html)]">(#TITRE)</a>]
+        [(#REM) sous menu, on affiche les articles ]
+        <B_sous_menu>
+        <ul class="sous_menu">
+            <BOUCLE_sous_menu(ARTICLES){id_rubrique}>
+                <li>#TITRE</li>
+            </BOUCLE_sous_menu>
+        </ul>
+        </B_sous_menu>
+    </li>
     </BOUCLE_menu_principal>
 </ul>
 </B_menu_principal>
