--- a/squelettes/inclure/menu-principal.html
+++ b/squelettes/inclure/menu-principal.html
@@ -11,7 +11,7 @@
         <B_sous_menu>
         <ul id="#GET{drop}" class="f-dropdown content" data-dropdown-content>
             <BOUCLE_sous_menu(ARTICLES){id_rubrique}>
-                <li>#TITRE</li>
+                <li><a href="#URL_ARTICLE" title="[(#TITRE|attribut_html)]">#TITRE</a></li>
             </BOUCLE_sous_menu>
         </ul>
         </B_sous_menu>
