On place les différente flèche de couleur correctement.

--- a/squelettes/inclure/head-foundation-4.html
+++ b/squelettes/inclure/head-foundation-4.html
@@ -26,7 +26,7 @@
         $(this).css({
             top: $(this).position().top-30,
             left: $(this).position().left-200,
-            background: bg_color
+            backgroundColor: bg_color
         });
     }
 
