--- a/squelettes/inclure/menu-principal.html
+++ b/squelettes/inclure/menu-principal.html
@@ -10,6 +10,7 @@
         [(#REM) sous menu, on affiche les articles ]
         <B_sous_menu>
         <ul id="#GET{drop}" class="f-dropdown content" data-dropdown-content>
+            <li class="fleche"></li>
             <BOUCLE_sous_menu(ARTICLES){id_rubrique}>
                 <li><a href="#URL_ARTICLE" title="[(#TITRE|attribut_html)]">#TITRE</a></li>
             </BOUCLE_sous_menu>
