Correction du commentaire.

--- a/squelettes/inclure/moteur-recherche.html
+++ b/squelettes/inclure/moteur-recherche.html
@@ -1,5 +1,5 @@
 [(#REM) 
-    Moteur de recherche de Badje, la boucle est le principal élément qui constitue ce moteur.
+    Moteur de recherche de Badje. La fonction traiter du fomulaire construit la requête SQL qui s'occupe de ce moteur.
     Dans le cas de string virgule comme la période on filtre les résultat après la séléction par la boucle.
 ]
 <B_recherche>
