--- a/squelettes/inclure/cadre_activite.html
+++ b/squelettes/inclure/cadre_activite.html
@@ -1,7 +1,6 @@
 [(#REM) Ce fichier sert a mettre en page les activites de manière générique ]
 
 <!-- TODO: Ajouter type d'activité au cadre. -->
-
 <BOUCLE_cadre_activite(BADJE_ACTIVITES){id_activite}>
     <h3><span>#NOM</span> [(#FORMULAIRE_CADI{#ID_ACTIVITE})]</h3>
     <div class="cadre-recherche">
@@ -17,6 +16,6 @@
             <li>de #AGE_MIN à #AGE_MAX | #PRIX</li>
         </ul>
         
-        <a href="[(#SELF|parametre_url{id_activite, #ID_ACTIVITE})]" title="#NOM_ORGANISME" class="plus_detail">[(#CHEMIN{images/plus_detail.png}|balise_img{plus de détails, plus_detail})]<:detail:></a>
+        <a href="[(#SELF|parametre_url{id_activite, #ID_ACTIVITE})]" title="[(#NOM_ORGANISME|attribut_html)]" class="plus_detail">[(#CHEMIN{images/plus_detail.png}|balise_img{plus de détails, plus_detail})]<:detail:></a>
     </div>
 </BOUCLE_cadre_activite>
