Couleur de fond pour la partie age/prix du détail.

--- a/squelettes/inclure/recherche-sidebar.html
+++ b/squelettes/inclure/recherche-sidebar.html
@@ -41,7 +41,7 @@
                             </BOUCLE_type_activite_cadre></li>
 
                         [<li>(#DESCRIPTIF)</li>]
-                        <li class="age">de #AGE_MIN à #AGE_MAX ans | #PRIX</li>
+                        <li class="age"><span>de #AGE_MIN à #AGE_MAX ans | #PRIX</span></li>
                         [<li>(#PERIODE|afficher_periode{' - '})</li>]
                     </ul>
 
