--- a/squelettes/inclure/recherche-sidebar.html
+++ b/squelettes/inclure/recherche-sidebar.html
@@ -40,8 +40,10 @@
                                 ]
                             </BOUCLE_type_activite_cadre></li>
 
-                        [<li>(#DESCRIPTIF)</li>]
-                        <li class="age"><span>de #AGE_MIN à #AGE_MAX ans | #PRIX</span></li>
+                        [<li class="description">(#DESCRIPTIF)</li>]
+                        <li class="age">
+                            <span>de #AGE_MIN à #AGE_MAX ans | #PRIX</span>
+                        </li>
                         [<li>(#PERIODE|afficher_periode{' - '})</li>]
                     </ul>
 
