On passe la méthode en GET ça permet de toujours garder la recherche dans le _request et donc de toujours l'afficher.

--- a/squelettes/formulaires/badje.html
+++ b/squelettes/formulaires/badje.html
@@ -3,7 +3,7 @@
 [<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
 [<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
 
-<form action="#ENV{action}" method="post">
+<form action="#ENV{action}" method="get">
     #ACTION_FORMULAIRE{#ENV{action}}
     <div id="recherche_libre" class="row">
         <div class="large-7 columns">
